# pomodoro-shell-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
pomodoro_shell_cli/: __init__.py  cli.py
pomodoro_shell_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
