[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pomodoro-shell-cli"
version = "0.1.0"
description = "Command-line interface for GNOME Pomodoro"
readme = "README.md"
authors = [
    {name = "Pablo Ventura", email = "pablogventura@gmail.com"},
]
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "dbus-fast>=1.0.0",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: GNOME",
]
[project.urls]
Homepage = "https://github.com/pablogventura/pomodoro-shell-cli"
Repository = "https://github.com/pablogventura/pomodoro-shell-cli"

[project.scripts]
pomodoro = "pomodoro_shell_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pomodoro_shell_cli*"]
